--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+git config --global user.email
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,7 +17,7 @@
 </head>
 <body>
 
-<header class="header"></header>
+<header class="header">Ntcn </header>
 
 
 <section></section>
