--- a/index.html
+++ b/index.html
@@ -1,39 +1,54 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/uikit.css">
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/uikit-rtl.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/custom.css">
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
     <script src="js/uikit.js"></script>
     <script src="js/uikit-icons.js"></script>
     <script src="js/scripts.js"></script>
     <title>Ньютоника</title>
 </head>
+
 <body>
 
-<header class="header">Ntcn </header>
+    <header class="header">
+        <div class="header-block">
+            <div class="header-logo">
+                <object type="image/svg+xml" data="svg/logo.svg">
+                    <img src="svg/logo.svg">
+                </object>
+            </div>
+            <div class="header-nav"></div>
+            <div class="header-phone"></div>
+            <div class="header-buttons"></div>
+        </div>
+    </header>
 
 
-<section></section>
-<section></section>
-<section></section>
-<section></section>
-<section></section>
-<section></section>
-<section></section>
-<section></section>
-<section></section>
-<section></section>
-<section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
 
 
-<footer class="footer"></footer>
-    
+    <footer class="footer"></footer>
+
 </body>
+
 </html>
