--- a/index.html
+++ b/index.html
@@ -137,20 +137,91 @@
                         </ul>
                     </div>
                     <div class="uk-width-expand@m trend-nav-item">
-                        <ul id="component-nav" class="uk-switcher">
-                            <li>Посеял старик пшеницу, и выросла пшеница богатая, да повадился ту пшеницу кто-то по
-                                ночам толочь и травить. Вот старик и говорит детям...</li>
-                            <li>Приходит первая ночь. Отправился старший сын пшеницу стеречь, да захотелось ему спать:
-                                забрался он на сеновал и проспал до утра. Приходит утром домой.</li>
-                            <li>В самую полночь прискакал в пшеницу разношерстный конь: одна шерстинка золотая, другая —
-                                серебряная, бежит — земля дрожит, из ушей дым столбом валит, из ноздрей пламя пышет.
+                        <ul id="component-nav" class="uk-switcher ">
+                            <li>
+                                <ul>
+                                    <li><a href="#">Логопед</a></li>
+                                    <li><a href="#">Дефектолог</a></li>
+                                    <li><a href="#">Психолог</a></li>
+                                    <li><a href="#">Раннее развитие</a></li>
+                                </ul>
+                                <h4>Дополнительно</h4>
+                                <ul>
+                                    <li><a href="#">Компьютерная грамотность</a></li>
+                                    <li><a href="#">Основы программирования</a></li> 
+                                </ul>
                             </li>
-                            <li>Посеял старик пшеницу, и выросла пшеница богатая, да повадился ту пшеницу кто-то по
-                                ночам толочь и травить. Вот старик и говорит детям...</li>
-                            <li>Приходит первая ночь. Отправился старший сын пшеницу стеречь, да захотелось ему спать:
-                                забрался он на сеновал и проспал до утра. Приходит утром домой.</li>
-                            <li>В самую полночь прискакал в пшеницу разношерстный конь: одна шерстинка золотая, другая —
-                                серебряная, бежит — земля дрожит, из ушей дым столбом валит, из ноздрей пламя пышет.
+                            <li>
+                                <ul>
+                                    <li><a href="#">Логопед</a></li>
+                                    <li><a href="#">Дефектолог</a></li>
+                                    <li><a href="#">Психолог</a></li>
+                                    <li><a href="#">Нейропсихолог</a></li>
+                                    <li><a href="#">Подготовка к школе</a></li>
+                                </ul>
+                                <h4>Дополнительно</h4>
+                                <ul>
+                                    <li><a href="#">Компьютерная грамотность</a></li>
+                                    <li><a href="#">Основы программирования</a></li> 
+                                </ul>
+                            </li>
+                            <li>
+                                <ul>
+                                    <li><a href="#">Математика</a></li>
+                                    <li><a href="#">Русский язык</a></li>
+                                    <li><a href="#">Окружающий мир</a></li>
+                                    <li><a href="#">Иностранный язык</a></li>
+                                    <li><a href="#">Литературное чтение</a></li>
+                                </ul>
+                                <h4>Дополнительно</h4>
+                                <ul>
+                                    <li><a href="#">Компьютерная грамотность</a></li>
+                                    <li><a href="#">Основы программирования</a></li> 
+                                </ul>
+                            </li>
+                            <li>
+                                <ul>
+                                    <li><a href="#">Русский язык</a></li>
+                                    <li><a href="#">Алгебра</a></li>
+                                    <li><a href="#">Геометрия</a></li>
+                                    <li><a href="#">Химия</a></li>
+                                    <li><a href="#">Физика</a></li>
+                                    <li><a href="#">История</a></li>
+                                    <li><a href="#">Биология</a></li>
+                                    <li><a href="#">География</a></li>
+                                    <li><a href="#">Иностранный язык</a></li>
+                                </ul>
+                                <h4>Дополнительно</h4>
+                                <ul>
+                                    <li><a href="#">Компьютерная грамотность</a></li>
+                                    <li><a href="#">Основы программирования</a></li> 
+                                </ul>
+                            </li>
+                            <li>
+                                <ul>
+                                    <li><a href="#">Логопед</a></li>
+                                    <li><a href="#">Дефектолог</a></li>
+                                    <li><a href="#">Психолог</a></li>
+                                    <li><a href="#">Раннее развитие</a></li>
+                                </ul>
+                                <h4>Дополнительно</h4>
+                                <ul>
+                                    <li><a href="#">Компьютерная грамотность</a></li>
+                                    <li><a href="#">Основы программирования</a></li> 
+                                </ul>
+                            </li>
+                            <li>
+                                <ul>
+                                    <li><a href="#">Логопед</a></li>
+                                    <li><a href="#">Дефектолог</a></li>
+                                    <li><a href="#">Психолог</a></li>
+                                    <li><a href="#">Раннее развитие</a></li>
+                                </ul>
+                                <h4>Дополнительно</h4>
+                                <ul>
+                                    <li><a href="#">Компьютерная грамотность</a></li>
+                                    <li><a href="#">Основы программирования</a></li> 
+                                </ul>
                             </li>
                         </ul>
                     </div>
@@ -368,27 +439,27 @@
         </section>
 
         <!-- 5 секция Начните бесплатно-->
-        <section class="container-item uk-flex">
+        <section class="container-item uk-child-width-1-1@s uk-child-width-1-2@m uk-grid-collapse" uk-grid>
             <div>
-                <h3>Начните бесплатно</h3>
-                <p>Пробное занятия по любому направлению с любым репетитором</p>
-                <div>
+                <h3 class="section-five-title">Начните бесплатно</h3>
+                <p class="section-five-text">Пробное занятия по любому направлению с любым репетитором</p>
+                <div class="section-five-stages uk-child-width-1-1@s uk-child-width-1-2@m uk-child-width-1-2@l uk-grid-small"  uk-grid>
                     <div>
-                        <p><span>01</span>Познакомим с платформой</p>
+                         <span>01</span><div class="section-five-stages-item-text">Познакомим с платформой</div>  
                     </div>
                     <div>
-                        <p><span>02</span>Оценим текущие знания ребёнка</p>
+                         <span>02</span><div class="section-five-stages-item-text">Оценим текущие знания ребёнка</div>  
                     </div>
                     <div>
-                        <p><span>03</span>Определим цели для обучения</p>
+                         <span>03</span><div class="section-five-stages-item-text">Определим цели для обучения</div>  
                     </div>
                     <div>
-                        <p><span>04</span>Подберём опытного репетитора</p>
+                         <span>04</span><div class="section-five-stages-item-text">Подберём опытного репетитора</div>  
                     </div>
                 </div>
             </div>
             <div>
-                <form class="form_1 uk-width-1-2@m uk-margin-auto" action="" method="POST">
+                <form class="form_1 uk-width-1-1@m section-five-form" action="" method="POST">
                     <fieldset class="uk-fieldset">
                         <legend class="uk-legend uk-text-center">Оставьте заявку, и мы свяжемся с вами</legend>
 
@@ -418,16 +489,15 @@
         </section>
 
         <!-- 6 секция Как начатьзанятия-->
-        <section class="container-item uk-flex">
-            <div>
+        <section class="container-item" uk-grid>
+            <div class="uk-width-1-2@m uk-grid-collapse"> 
                 <img src="images/test/Иллюстрация.png" alt="">
             </div>
-            <div>
-                <h3>Как начать занятия</h3>
-                <h3>Оставьте завку и мы вам перезвоним</h3>
+            <div class="section-six-second uk-width-1-2@m">
+                <h3 class="">Как начать занятия</h3>
+                <h3 class="section-six-title-second">Оставьте заявку и мы вам перезвоним</h3>
                 <button class="uk-button uk-button-primary button-tree">Оставить заявку</button>
-                <p>Педагог-куратор Вам перезвонит, обсудит все моменты, выберет удобное время для первого пробного
-                    занятия</p>
+                <p class="section-six-text-second">Педагог-куратор Вам перезвонит, обсудит все моменты, выберет удобное время для первого пробного занятия</p>
             </div>
         </section>
 
