--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             <!-- Навигация, ссылки -->
             <ul class="uk-navbar-nav">
                 <li class="nav-item uk-active"><a href="#">Направления</a>
-                    <div class="uk-navbar-dropdown">
+                    <div class="uk-navbar-dropdown header-menu">
                         <ul class="uk-nav uk-navbar-dropdown-nav">
                             <li class="uk-active"><a href="#">Активное</a>
-                                <div class="uk-navbar-dropdown">
-                                    <ul class="uk-nav uk-navbar-dropdown-nav">
+                                <div class="uk-navbar-dropdown header-menu-second">
+                                    <ul class="uk-nav uk-navbar-dropdown-nav header-menu-second-position">
                                         <li><a href="#">Активное</a></li>
                                         <li><a href="#">Элемент списка</a></li>
                                         <li><a href="#">Пункт меню</a></li>
@@ -50,7 +50,17 @@
                                     </ul>
                                 </div>
                             </li>
-                            <li><a href="#">Элемент списка</a></li>
+                            <li><a href="#">Элемент списка</a>
+                                <div class="uk-navbar-dropdown header-menu-second">
+                                    <ul class="uk-nav uk-navbar-dropdown-nav header-menu-second-position">
+                                        <li><a href="#">Активное</a></li>
+                                        <li><a href="#">Элемент списка</a></li>
+                                        <li><a href="#">Пункт меню</a></li>
+                                        <li><a href="#">Продолжаем</a></li>
+
+                                    </ul>
+                                </div>
+                            </li>
                             <li><a href="#">Пункт меню</a></li>
                             <li><a href="#">Продолжаем</a></li>
                         </ul>
@@ -842,43 +852,52 @@
             <div class="footer-content">
                 <div class="footer-content_item">
                     <ul>
-                        <li>Политика обработки персональных данных</li>
-                        <li> Карьера репетитора</li>
-                        <li>Контакты</li>
-                        <li>Оферта</li>
-                        <li>Вебинары</li>
-                        <li>Карта сайта</li>
-                        <li>Партнерская программа</li>
+                        <li><a href="">Политика обработки персональных данных</a></li>
+                        <li><a href="">Карьера репетитора</a></li>
+                        <li><a href="">Контакты</a></li>
+                        <li><a href="">Оферта</a></li>
+                        <li><a href="">Вебинары</a></li>
+                        <li><a href="">Карта сайта</a></li>
+                        <li><a href="">Партнерская программа</a></li>
                     </ul>
 
-                    <div>
+                    <div class="footer-content_item_requisites">
                         ОГРН: 1187746880530 <br>
                         ИНН/КПП: 7702446568/770901001
                     </div>
                 </div>
                 <div class="footer-content_item">
-                    <div>
-                        Почта<br>
-                        barmarat@bk.ru
-                        <br>
-                        Телефон
-                        <br>
-                        9 (999) 999-99-99<br>
-                        Получить консультацию<br>
+                        <div class="footer-content_item_info">
+                       <p class="footer-content_item-title">Почта</p>
+                       <p>barmarat@bk.ru</p>
+                       </div>
 
-                        9 (999) 999-99-99<br>
-                        Получить консультацию<br>
-
-                        9 (999) 999-99-99<br>
-                        Для новых пользователей<br>
-                        <br>
-                        Отдел заботы о пользователях<br>
+                       <div class="footer-content_item_info">
+                        <p class="footer-content_item-title">Телефон</p>
+                        <div>
+                            <p>9 (999) 999-99-99</p>
+                            <p>Получить консультацию</p>
+                        </div>
+                        <div>
+                            <p>9 (999) 999-99-99</p>
+                            <p>Для новых пользователе</p>
+                        </div>
+                        <div>
+                            <p>9 (999) 999-99-99</p>
+                            <p>Отдел заботы о пользователях</p>
+                        </div>
                     </div>
-                    <div>105120, г. Москва, ул. Нижняя Сыромятническая, дом 10, строение 2, помещ. 1, ком. 4</div>
+                    <div class="footer-content_item_adress">105120, г. Москва, ул. Нижняя Сыромятническая, дом 10, строение 2, помещ. 1, ком. 4</div>
                 </div>
                 <div class="footer-content_item">
-                    <div>Напишите нам</div>
-                    <div>Наши соц. сети</div>
+                    <div>
+                        <div class="footer-content_item-title">Напишите нам</div>
+                        <div><a href=""></a><a href=""></a><a href=""></a></div>
+                    </div>
+                    <div>
+                        <div class="footer-content_item-title">Наши соц. сети</div>
+                        <div><a href=""></a><a href=""></a><a href=""></a></div>
+                    </div>
                     <div><img src="images/test/Слой 72.png" alt=""></div>
                 </div>
             </div>
