--- a/index.html
+++ b/index.html
@@ -136,17 +136,22 @@
 
 
         <!-- 1 секция  Главный баннер и текст-->
-        <section class="container-item uk-flex-between" uk-grid>
+        <section class="container-item uk-flex-between one-section" uk-grid>
 
             <div class="uk-width-1-2@m uk-padding-remove">
                 <h1 class="h1-banner">Онлайн-занятия с гениальными репетиторами</h1>
+
+                <div class="banner-content">
                 <div class="h1-banner-text">
                     Логопеды разовьют ребенка, а репетиторы подготовят ребенка к школе, подтянут школьный предмет на 5+
                 </div>
-                <button class="uk-button uk-button-primary button-tree">Оставить заявку</button>
+                    <button class="uk-button uk-button-primary button-tree button-one-section">Оставить заявку</button>
+                </div>
+                
             </div>
             <div class="uk-width-expand@m uk-padding-remove">
                 <img src="images/test/Иллюстрация1.png" alt="">
+                <button class="uk-button uk-button-primary button-tree button-one-mobile">Оставить заявку</button>
             </div>
         </section>
         
