--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                     <div class="uk-slider-container uk-light">
 
                         <ul
-                            class="uk-slider-items uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-3@m uk-grid-small">
+                            class="uk-slider-items uk-child-width-1-1 uk-child-width-1-1@s uk-child-width-1-3@m uk-grid-small teachers">
                             <li>
                                 <div class="uk-card uk-card-default">
                                     <div class="uk-card-media-top">
@@ -492,11 +492,11 @@
         </section>
 
         <!-- 4 секция Как проходят занятия-->
-        <section class="container-item  uk-flex">
+        <section class="container-item section-four uk-flex">
             <div>
                 <img src="images/test/Group 182.png" alt="">
             </div>
-            <div class="section-four">
+            <div class="section-four-title">
                 <h3>Как проходят занятия</h3>
 
                 <ul class="section-four-text">
@@ -521,7 +521,7 @@
             <div class="five-section-img6 icons-block icons-style"><img class="" src="icons/Процент.svg" alt=""></div>
             
         </section>
-        <section class="container-item uk-child-width-1-1@s uk-child-width-1-2@m uk-grid-collapse" uk-grid>
+        <section class="container-item uk-child-width-1-1@s uk-child-width-1-2@m uk-grid-collapse section-five" uk-grid>
             <div>
                 <h3 class="section-five-title">Начните бесплатно</h3>
                 <p class="section-five-text">Пробное занятия по любому направлению с любым репетитором</p>
@@ -546,7 +546,7 @@
                 </div>
             </div>
             <div>
-                <form class="form_1 uk-width-1-1@m section-five-form" action="" method="POST">
+                <form class="form_1 section-five-form" action="" method="POST">
                     <fieldset class="uk-fieldset">
                         <legend class="uk-legend uk-text-center">Оставьте заявку, и мы свяжемся с вами</legend>
 
@@ -575,14 +575,17 @@
         </section>
 
         <!-- 6 секция Как начатьзанятия-->
-        <section class="container-item" uk-grid>
-            <div class="uk-width-1-2@m uk-grid-collapse">
+        <section class="container-item section-six" uk-grid>
+            <div class="uk-width-1-2@m uk-grid-collapse section-six-one">
                 <img src="images/test/Иллюстрация.png" alt="">
+                <button class="uk-button uk-button-primary button-tree section-six-button-one">Оставить заявку</button>
+                <p class="section-six-text-one">Педагог-куратор Вам перезвонит, обсудит все моменты, выберет удобное
+                    время для первого пробного занятия</p>
             </div>
             <div class="section-six-second uk-width-1-2@m">
                 <h3 class="">Как начать занятия</h3>
                 <h3 class="section-six-title-second">Оставьте заявку и мы вам перезвоним</h3>
-                <button class="uk-button uk-button-primary button-tree">Оставить заявку</button>
+                <button class="uk-button uk-button-primary button-tree section-six-button-second">Оставить заявку</button>
                 <p class="section-six-text-second">Педагог-куратор Вам перезвонит, обсудит все моменты, выберет удобное
                     время для первого пробного занятия</p>
             </div>
@@ -595,7 +598,7 @@
             <div class="seven-section-img3 icons-shadow icons-style"><img class="" src="icons/чернила.png" alt=""></div>
             
         </section>
-        <section class="container-item">
+        <section class="container-item seven-section-margin-mobile">
 
             <div class="seven-section">
                 <div class="seven-section-block">
