--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <section class="header container">
 
-            <nav class="header-desktop header-nav uk-margin-small-top" uk-navbar>
+            <nav class="header-desktop header-nav uk-margin-small-top"  uk-navbar>
 
                 <div class="header-logo">
 
@@ -292,9 +292,9 @@
         <section class="container-item uk-flex-between one-section" uk-grid>
 
             <div class="uk-width-1-2@m uk-padding-remove">
-                <h1 class="h1-banner">Онлайн-занятия с гениальными репетиторами</h1>
+                <h1 class="h1-banner" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Онлайн-занятия с гениальными репетиторами</h1>
 
-                <div class="banner-content">
+                <div class="banner-content" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
                     <div class="h1-banner-text">
                         Логопеды разовьют ребенка, а репетиторы подготовят ребенка к школе, подтянут школьный предмет на
                         5+
@@ -304,16 +304,16 @@
 
             </div>
             <div class="uk-width-expand@m uk-padding-remove">
-                <img src="images/test/Иллюстрация1.png" alt="">
+                <img src="images/test/Иллюстрация1.png" alt="" uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 <button class="uk-button uk-button-primary button-tree button-one-mobile">Оставить заявку</button>
             </div>
         </section>
 
         <!-- 2 секция -->
-        <section class="two-section-dop">
+        <section class="two-section-dop" uk-scrollspy="cls: uk-animation-slide-left; delay: 400">
             <img class="two-section-img" src="images/зеленый-шейп1.png" alt="">
         </section>
-        <section class="two-section-dop-icons">
+        <section class="two-section-dop-icons" uk-scrollspy="cls: uk-animation-fade; delay: 600">
             <div class="two-section-img1 icons-shadow icons-style" tabindex="0"><img class="" src="icons/циркуль.png"
                     alt=""></div>
             <div class="two-section-img2 icons-shadow icons-style"><img class="" src="icons/спектр.png" alt=""></div>
@@ -325,7 +325,7 @@
 
         </section>
         <section class="container-item">
-            <h2 class="center">Направления</h2>
+            <h2 class="center" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Направления</h2>
             <div class="two-section">
 
                 <div uk-grid>
@@ -461,14 +461,14 @@
 
         <!-- 3 секция -->
         <section class="container-item">
-            <h3 class="center">Наши преподаватели</h3>
+            <h3 class="center" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Наши преподаватели</h3>
 
-            <div class="teacher-text">
+            <div class="teacher-text" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
                 Все наши преподаватели получают официальный допуск к занятиям с детьми. Допуск выдает педагогический
                 институт и предъявляется родителю, вместе с документами о повышении квалификации по направлению занятий
             </div>
 
-            <div uk-slider="autoplay: true; autoplay-interval: 5000">
+            <div uk-slider="autoplay: true; autoplay-interval: 5000" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
                 <div class="uk-position-relative">
                     <div class="uk-slider-container uk-light">
 
@@ -649,12 +649,12 @@
         <!-- 4 секция Как проходят занятия-->
         <section class="container-item section-four uk-flex">
             <div>
-                <img src="images/test/Group 182.png" alt="">
+                <img src="images/test/Group 182.png" alt="" uk-scrollspy="cls: uk-animation-fade; delay: 600">
             </div>
             <div class="section-four-title">
-                <h3>Как проходят занятия</h3>
+                <h3 uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Как проходят занятия</h3>
 
-                <ul class="section-four-text">
+                <ul class="section-four-text" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 500">
                     <li>Специальная веб-платформа</li>
                     <li>Игровая форма, с геймификацией</li>
                     <li>Интерактивная доска для занятий</li>
@@ -668,8 +668,8 @@
         </section>
 
         <!-- 5 секция Начните бесплатно-->
-        <section class="five-section-dop-icons">
-            <div class="five-section-img1 icons-shadow icons-style" tabindex="0"><img class="" src="icons/мольберт.png"
+        <section class="five-section-dop-icons" uk-scrollspy="cls: uk-animation-fade; delay: 600">
+            <div class="five-section-img1 icons-shadow icons-style" tabindex="0" ><img class="" src="icons/мольберт.png"
                     alt=""></div>
             <div class="five-section-img2 icons-shadow icons-style"><img class="" src="icons/рюкзак.png" alt=""></div>
             <div class="five-section-img3 icons-radius icons-style" src="" alt=""></div>
@@ -679,9 +679,9 @@
         </section>
         <section class="container-item uk-child-width-1-1@s uk-child-width-1-2@m uk-grid-collapse section-five" uk-grid>
             <div>
-                <h3 class="section-five-title">Начните бесплатно</h3>
-                <p class="section-five-text">Пробное занятия по любому направлению с любым репетитором</p>
-                <div class="section-five-stages uk-child-width-1-1@s uk-child-width-1-2@m uk-child-width-1-2@l uk-grid-small"
+                <h3 class="section-five-title" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Начните бесплатно</h3>
+                <p class="section-five-text" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">Пробное занятия по любому направлению с любым репетитором</p>
+                <div class="section-five-stages uk-child-width-1-1@s uk-child-width-1-2@m uk-child-width-1-2@l uk-grid-small" uk-scrollspy="cls: uk-animation-fade; delay: 500"
                     uk-grid>
                     <div class="uk-margin-large-bottom">
                         <span>01</span>
@@ -702,7 +702,7 @@
                 </div>
             </div>
             <div>
-                <form class="form_1 section-five-form" action="" method="POST">
+                <form class="form_1 section-five-form" action="" method="POST" uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     <fieldset class="uk-fieldset">
                         <legend class="uk-legend uk-text-center">Оставьте заявку, и мы свяжемся с вами</legend>
 
@@ -733,34 +733,34 @@
         <!-- 6 секция Как начатьзанятия-->
         <section class="container-item section-six" uk-grid>
             <div class="uk-width-1-2@m uk-grid-collapse section-six-one">
-                <img src="images/test/Иллюстрация.png" alt="">
+                <img src="images/test/Иллюстрация.png" alt="" uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 <button class="uk-button uk-button-primary button-tree section-six-button-one">Оставить заявку</button>
                 <p class="section-six-text-one">Педагог-куратор Вам перезвонит, обсудит все моменты, выберет удобное
                     время для первого пробного занятия</p>
             </div>
             <div class="section-six-second uk-width-1-2@m">
-                <h3 class="">Как начать занятия</h3>
-                <h3 class="section-six-title-second">Оставьте заявку и мы вам перезвоним</h3>
-                <button class="uk-button uk-button-primary button-tree section-six-button-second">Оставить
+                <h3 class="" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Как начать занятия</h3>
+                <h3 class="section-six-title-second" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">Оставьте заявку и мы вам перезвоним</h3>
+                <button class="uk-button uk-button-primary button-tree section-six-button-second" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 500">Оставить
                     заявку</button>
-                <p class="section-six-text-second">Педагог-куратор Вам перезвонит, обсудит все моменты, выберет удобное
+                <p class="section-six-text-second" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">Педагог-куратор Вам перезвонит, обсудит все моменты, выберет удобное
                     время для первого пробного занятия</p>
             </div>
         </section>
 
         <!-- 7 секция Почему нужно заниматься у нас?-->
         <section class="seven-section-dop-icons">
-            <div class="seven-section-img1 icons-shadow icons-style" tabindex="0"><img class="" src="icons/шапка.png"
+            <div class="seven-section-img1 icons-shadow icons-style" tabindex="0" uk-scrollspy="cls: uk-animation-fade; delay: 600"><img class="" src="icons/шапка.png"
                     alt=""></div>
-            <div class="seven-section-img2 icons-shadow icons-style"><img class="" src="icons/перо.png" alt=""></div>
-            <div class="seven-section-img3 icons-shadow icons-style"><img class="" src="icons/чернила.png" alt=""></div>
+            <div class="seven-section-img2 icons-shadow icons-style" uk-scrollspy="cls: uk-animation-fade; delay: 600"><img class="" src="icons/перо.png" alt=""></div>
+            <div class="seven-section-img3 icons-shadow icons-style" uk-scrollspy="cls: uk-animation-fade; delay: 600"><img class="" src="icons/чернила.png" alt=""></div>
 
         </section>
         <section class="container-item seven-section-margin-mobile">
 
             <div class="seven-section">
-                <div class="seven-section-block">
-                    <div class="seven-section-block-content">
+                <div class="seven-section-block" uk-scrollspy="cls: uk-animation-slide-left; delay: 400">
+                    <div class="seven-section-block-content" uk-scrollspy="cls: uk-animation-fade; delay: 600">
                         <h3>Почему нужно заниматься у нас?</h3>
                         <p>Мы являемся официальным образовательным учреждением - педагогическим институтом. </p>
                         <p>Все репетиторы обязаны аттестоваться в институте и получить допуск к занятиям.</p>
@@ -770,11 +770,11 @@
                     </div>
 
                 </div>
-                <a href="" class="section-block-button"></a>
+                <a href="" class="section-block-button" uk-scrollspy="cls: uk-animation-fade; delay: 700"></a>
             </div>
             <div class="seven-section-block-sertificat" uk-lightbox>
                 <a href="images/Лицензия1.jpg" data-caption="Лицензия на оказание образовательных услуг"><img
-                        src="images/Лицензия1.jpg" alt=""></a>
+                        src="images/Лицензия1.jpg" alt="" uk-scrollspy="cls: uk-animation-slide-right; delay: 500"></a>
             </div>
             <img class="seven-section-img" src="images/желтый-шейп1.png" alt="">
 
@@ -783,7 +783,7 @@
 
         <!-- 8 секция Посмотрите, за что нас любят ученики и их родители-->
         <section class="container-item">
-            <h3 class="center">Посмотрите, за что нас любят ученики и их родители</h3>
+            <h3 class="center"  uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">Посмотрите, за что нас любят ученики и их родители</h3>
 
             <ul class="uk-subnav uk-subnav-pill uk-flex-center" uk-switcher="connect: #switcher-id">
                 <li><a class="tab-button-reviews" href="#">Видео</a></li>
@@ -973,7 +973,7 @@
         </section>
 
         <!-- 9 секция -->
-        <section class="nine-section-dop-icons">
+        <section class="nine-section-dop-icons" uk-scrollspy="cls: uk-animation-fade; delay: 600">
             <div class="nine-section-img1 icons-shadow icons-style" tabindex="0"><img class="" src="icons/микроскоп.png"
                     alt=""></div>
             <div class="nine-section-img2 icons-shadow icons-style"><img class="" src="icons/лупа.png" alt=""></div>
@@ -985,39 +985,39 @@
 
         </section>
         <section class="container-item section-nine">
-            <h3>Хотите бесплатно заниматься с детьми сами?</h3>
-            <ul>
+            <h3 uk-scrollspy="cls: uk-animation-fade; delay: 300">Хотите бесплатно заниматься с детьми сами?</h3>
+            <ul uk-scrollspy="cls: uk-animation-fade; delay: 500">
                 <li>Авторизуйтесь на сайте и пользуйтесь бесплатно</li>
                 <li>Материалы для занятий</li>
                 <li>Онлайн-встречи с экспертами</li>
                 <li>Видеозаписи вебинаров</li>
             </ul>
-            <a href="" class="section-block-button position-nine-button"></a>
+            <a href="" class="section-block-button position-nine-button" uk-scrollspy="cls: uk-animation-fade; delay: 600"></a>
         </section>
 
 
         <!-- 10 секция Остались вопросмы-->
         <section class="container-item class uk-grid-small section-ten" uk-grid>
             <div class="uk-width-1-2@m">
-                <img class="section-ten-img" src="images/test/иллюстрация3.png" alt="">
+                <img class="section-ten-img" src="images/test/иллюстрация3.png" alt="" uk-scrollspy="cls: uk-animation-fade; delay: 500">
                 <button class="uk-button uk-button-primary button-tree section-ten-one-button">Получить
                     консультацию</button>
             </div>
             <div class="section-ten-second uk-width-1-2@m">
-                <h3>Остались вопросы?</h3>
-                <p class="section-ten-second-text">Ответим на них на бесплатной консультации</p>
-                <ul>
+                <h3 uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Остались вопросы?</h3>
+                <p class="section-ten-second-text" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">Ответим на них на бесплатной консультации</p>
+                <ul uk-scrollspy="cls: uk-animation-slide-bottom; delay: 500">
                     <li><span>01</span>Оставьте заявку</li>
                     <li><span>02</span>Дождитесь нашего звонка — позвоним с 09:00 до 22:00</li>
                     <li><span>03</span>Задайте вопросы — мы ответим на них и поможем подобрать репетитора</li>
                 </ul>
-                <button class="uk-button uk-button-primary button-tree section-ten-second-button">Получить
+                <button class="uk-button uk-button-primary button-tree section-ten-second-button" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">Получить
                     консультацию</button>
             </div>
         </section>
 
         <!-- 11 секция -->
-        <section class="elevn-section-dop-icons">
+        <section class="elevn-section-dop-icons" uk-scrollspy="cls: uk-animation-fade; delay: 600">
             <div class="elevn-section-img1 icons-shadow icons-style"><img class="" src="icons/картинка.png" alt="">
             </div>
             <div class="elevn-section-img2 icons-shadow icons-style"><img class="" src="icons/капитель.png" alt="">
@@ -1030,7 +1030,7 @@
 
         </section>
         <section class="container-item">
-            <h3>Частые вопросы</h3>
+            <h3 uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Частые вопросы</h3>
             <div class="accordion-answer">
                 <ul uk-accordion="multiple: true">
                     <li class="uk-open">
