--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                                     <div class="uk-navbar-dropdown header-menu-second">
                                         <ul class="uk-nav uk-navbar-dropdown-nav header-menu-second-position">
                                             <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
-                                                Активное</a></li>
-                                        <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
-                                                Элемент списка</a></li>
-                                        <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
-                                                Пункт меню</a></li>
-                                        <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
-                                                Продолжаем</a></li>
+                                                    Активное</a></li>
+                                            <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
+                                                    Элемент списка</a></li>
+                                            <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
+                                                    Пункт меню</a></li>
+                                            <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
+                                                    Продолжаем</a></li>
 
 
                                         </ul>
@@ -61,13 +61,13 @@
                                     <div class="uk-navbar-dropdown header-menu-second">
                                         <ul class="uk-nav uk-navbar-dropdown-nav header-menu-second-position">
                                             <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
-                                                Активное</a></li>
-                                        <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
-                                                Элемент списка</a></li>
-                                        <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
-                                                Пункт меню</a></li>
-                                        <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
-                                                Продолжаем</a></li>
+                                                    Активное</a></li>
+                                            <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
+                                                    Элемент списка</a></li>
+                                            <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
+                                                    Пункт меню</a></li>
+                                            <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
+                                                    Продолжаем</a></li>
 
                                         </ul>
                                     </div>
@@ -93,26 +93,32 @@
                 </div>
 
             </nav>
-            <nav class="header-mobile header-nav uk-margin-small-top uk-margin-small-bottom" uk-navbar>
-
+</section>
+<section>
+            <nav class="">
+             <div class="header container header-mobile uk-margin-small-top uk-margin-small-bottom"  uk-navbar>
                 <div class="header-logo">
                     <img src="svg/logo.svg">
                 </div>
-                <button class="uk-button button-two uk-margin-small-right">Войти на урок</button>
+                <a class="uk-button button-two button-one-mobile-header uk-margin-small-right">Войти на урок</a>
                 <div class="mobile-buttons-block">
                     <a class="button-menu-lk" href=""></a>
                     <a class="button-menu-telefon" href="tel:+79999999999"></a>
-                    <a href="#offcanvas-slide" class="button-menu" uk-toggle></a>  
+                    <a href="#offcanvas-slide" class="button-menu header-buttons-menu-open" uk-toggle></a>
                 </div>
                 <div id="offcanvas-slide" uk-offcanvas>
                     <div class="uk-offcanvas-bar menu-slide">
-                        <div class="menu-mobile-title">Меню</div>
+                        <div class="menu-mobile-title">Меню <a href="#offcanvas-slide"
+                                class="button-menu header-buttons-menu-close" uk-toggle></a></div>
                         <ul class="uk-nav-default menu-mobile" uk-nav>
-                            <li class="uk-parent nav-item"><a href="#">Направления<span uk-nav-parent-icon></span></a>
+                            <li class="uk-parent nav-item"><a href="#">Направления<span
+                                        class="uk-nav-parent-icon icon-menu-one">
+                                    </span></a>
 
                                 <ul class="uk-nav-sub menu-second-mobile uk-nav uk-nav-default" uk-nav>
                                     <li class="uk-parent">
-                                        <a href="#">Активное <span uk-nav-parent-icon></span></a>
+                                        <a href="#">Активное<span class="uk-nav-parent-icon icon-menu-two">
+                                            </span></a>
 
                                         <ul class="menu-second-sub-mobile uk-nav uk-nav-default" uk-nav>
                                             <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
@@ -128,7 +134,8 @@
 
                                     </li>
                                     <li class="uk-parent">
-                                        <a href="#">Элемент списка <span uk-nav-parent-icon></span></a>
+                                        <a href="#">Элемент списка <span
+                                                class="uk-nav-parent-icon icon-menu-two"></span></a>
 
                                         <ul class="menu-second-sub-mobile uk-nav-sub uk-nav uk-nav-default">
                                             <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
@@ -143,12 +150,15 @@
                                         </ul>
 
                                     </li>
-                                    <li class="uk-parent"><a href="#">Пункт меню</a></li>
-                                    <li class="uk-parent"><a href="#">Продолжаем</a></li>
+                                    <li class="uk-parent"><a href="#">Пункт меню <span
+                                                class="uk-nav-parent-icon icon-menu-two"></span></a></li>
+                                    <li class="uk-parent"><a href="#">Продолжаем <span
+                                                class="uk-nav-parent-icon icon-menu-two"></span></a></li>
                                 </ul>
 
                             </li>
-                            <li class="nav-item"><a href="#">О школе</a></li>
+                            <li class="nav-item uk-parent"><a href="#">О школе <span
+                                        class="uk-nav-parent-icon icon-menu-one"></span></a></li>
 
                             <li class="uk-nav-divider nav-line"></li>
                             <li>
@@ -169,7 +179,7 @@
                                         <div>
                                             <div class="footer-content_item-title uk-margin-top uk-margin-small-bottom">
                                                 Наши соц. сети</div>
-                                            <div class="footer-content_icons">
+                                            <div class="footer-content_icons uk-margin-bottom">
                                                 <a href="">
                                                     <img class="trend-icon" src="svg/youtube.svg" alt="">
                                                 </a><a href="">
@@ -190,6 +200,10 @@
                     </div>
                 </div>
                 </div>
+            </div>
+            <div>
+            <a class="uk-button button-two-mobile-header uk-margin-small-right">Войти на урок</a>
+            </div>
             </nav>
 
         </section>
@@ -214,13 +228,13 @@
                         Логопеды разовьют ребенка, а репетиторы подготовят ребенка к школе, подтянут школьный предмет на
                         5+
                     </div>
-                    <button class="uk-button uk-button-primary button-tree button-one-section">Оставить заявку</button>
+                    <a class="uk-button uk-button-primary button-tree button-one-section">Оставить заявку</a>
                 </div>
 
             </div>
             <div class="uk-width-expand@m uk-padding-remove">
                 <img src="images/test/Иллюстрация1.png" alt="" uk-scrollspy="cls: uk-animation-fade; delay: 600">
-                <button class="uk-button uk-button-primary button-tree button-one-mobile">Оставить заявку</button>
+                <a class="uk-button uk-button-primary button-tree button-one-mobile">Оставить заявку</a>
             </div>
         </section>
 
