--- a/index.html
+++ b/index.html
@@ -1182,6 +1182,7 @@
                     строение 2, помещ. 1, ком. 4</div>
                 <div class="uk-margin-medium-top footer-content_item footer-content_item_img"><img src="images/test/Слой 72.png" alt=""></div>
             </div>
+            <a href="#" class="scrollup">Наверх</a>
     </footer>
 
 
